# RicksAwesomeRaytracer

./: CMakeLists.txt  README.md  scene.json
src/: Camera.cpp  Camera.hpp  Geometry.hpp  Importer.cpp  Importer.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Ray.cpp  Ray.hpp  RayHit.cpp  RayHit.hpp  Render.cpp  Render.hpp  Scene.cpp  Scene.hpp  Sphere.cpp  Sphere.hpp  backgrounds.cpp  backgrounds.hpp  lib.cpp  lib.h  main.cpp  math.hpp  render.cpp  render.h  tiles.cpp  tiles.h  tiles.hpp  trace.cpp  trace.hpp  vecs.cpp  vecs.h  vecs.hpp
